modify display issue on mobile devices

--- a/sass/parts/_article.scss
+++ b/sass/parts/_article.scss
@@ -20,6 +20,7 @@ article{
 	.entry-content{
 		line-height: 2;
 		text-align: justify;
+    word-break: break-all;
 		a{
 			&:hover{
 				text-decoration: underline;
